# sphinxutils

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  SConstruct  mit-license.txt  pyproject.toml  syncenv.py  tox.ini
.github/workflows/: ci.yaml  lint.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.sphinxutils/: index.rst
python/lsst/sphinxutils/: __init__.py
python/lsst/sphinxutils/cli/: packagedocs.py  stackdocs.py
python/lsst/sphinxutils/ext/: autocppapi.py  autodocreset.py  packagetoctree.py  utils.py
python/lsst/sphinxutils/ext/lssttasks/: __init__.py  _configfieldlists.py  _crossrefs.py  _pyapisummary.py  _topiclists.py  _topics.py  _utils.py
tests/: conftest.py  test_null.py
tests/ext/: test_packagetoctree.py  test_utils.py
tests/roots/test-packagetoctree/: conf.py  index.rst
tests/roots/test-packagetoctree/modules/lsst.packageA/: index.rst
tests/roots/test-packagetoctree/modules/lsst.packageB/: index.rst
tests/roots/test-packagetoctree/modules/lsst.skipthis/: index.rst
ups/: sphinxutils.table
